attempts to fix escape issue in cv.md

--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -33,6 +33,6 @@
     }
   });
 </script>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.4/latest.js?config=TeX-MML-AM_CHTML' async></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/3.2.2/es5/latest.min.js" integrity="sha512-QQm/4OlaCH+aZ5vZH9j1fDm1VP4JCqcYPvQgjEvDNm+jEA5rScyBKAo7IbonniacCAX3AHoCZWaJLIQ2MARNxw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
 <!-- end custom head snippets -->
