updates mathjax script src

--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -33,6 +33,6 @@
     }
   });
 </script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/3.2.2/es5/latest.min.js" integrity="sha512-QQm/4OlaCH+aZ5vZH9j1fDm1VP4JCqcYPvQgjEvDNm+jEA5rScyBKAo7IbonniacCAX3AHoCZWaJLIQ2MARNxw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 
 <!-- end custom head snippets -->
